<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#A6F4E2"
    >

    <TextView
        android:id="@+id/heading"
        android:layout_width="186dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/iot_store"
        android:textColor="#F39E55"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/items"
        android:textColor="#F39E55"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <TextView
        android:id="@+id/subheading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/quantity"
        android:textColor="#F39E55"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toEndOf="@+id/subheading"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <TextView
        android:id="@+id/arduinounit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/aurdino_uno"
        android:textColor="#F39E55"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheading" />

    <TextView
        android:id="@+id/Wifimod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/wifi_module"
        android:textColor="#F39E55"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arduinounit" />

    <TextView
        android:id="@+id/Bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/bluetooth"
        android:textColor="#F39E55"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wifimod" />

    <Button
        android:id="@+id/submit"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/submit"
        android:textColor="#F39E55"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bluetooth" />

    <Button
        android:id="@+id/clear"
        android:layout_width="137dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/clear"
        android:textColor="#F39E55"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/submit"
        app:layout_constraintTop_toBottomOf="@+id/editblue" />

    <EditText
        android:id="@+id/editarduinounit"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/frame"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/arduinounit"
        app:layout_constraintTop_toBottomOf="@+id/subheading2" />

    <EditText
        android:id="@+id/editwifi"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/frame"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editarduinounit" />

    <EditText
        android:id="@+id/editblue"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/frame"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toEndOf="@+id/Bluetooth"
        app:layout_constraintTop_toBottomOf="@+id/editwifi"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/amountpayable"
        android:layout_width="229dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:background="#FA5398F1"
        android:fontFamily="casual"
        android:text="@string/amount_payable"
        android:textColor="#F39E55"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit" />

    <TextView
        android:id="@+id/editpayable"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/frame"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toEndOf="@+id/amountpayable"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

</androidx.constraintlayout.widget.ConstraintLayout>